feat: add crud for institutions

--- a/SimpleFinance.AppHost/SimpleFinance.AppHost.csproj
+++ b/SimpleFinance.AppHost/SimpleFinance.AppHost.csproj
@@ -10,6 +10,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\src\SimpleFinance.WebApi\SimpleFinance.WebApi.csproj" />
+      <ProjectReference Include="..\src\SimpleFinance.WebApp\SimpleFinance.WebApp.csproj" />
     </ItemGroup>
 
 </Project>
