feat: add blazor bootstrap

--- a/src/SimpleFinance.WebApp/SimpleFinance.WebApp.csproj
+++ b/src/SimpleFinance.WebApp/SimpleFinance.WebApp.csproj
@@ -14,4 +14,8 @@
       </Content>
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Blazor.Bootstrap" Version="3.5.0" />
+    </ItemGroup>
+
 </Project>
